# Project_Align

./: .gitignore  CMakeLists.txt  PAR_AI_SAVE.txt  Project_Align_Rebuild.cbp  Project_Align_Rebuild.depend  Project_Align_Rebuild.layout  Project_Align_Stuct.txt  README.md
doxygen/: doxyfile
doxygen/html/: _bootstrap_8cpp.html  _bootstrap_8hpp.html  _bootstrap_8hpp_source.html  _debug_and_log_runtime_8cpp.html  _debug_and_log_runtime_8hpp.html  _debug_and_log_runtime_8hpp_source.html  _error_handler_8cpp.html  _error_handler_8hpp.html  _error_handler_8hpp_source.html  _supervisor_runtime_8cpp.html  _supervisor_runtime_8hpp.html  _supervisor_runtime_8hpp_source.html  annotated.html  annotated_dup.js  class_engine_1_1_runtime_1_1_bootstrap-members.html  class_engine_1_1_runtime_1_1_bootstrap.html  class_engine_1_1_runtime_1_1_bootstrap.js  class_engine_1_1_runtime_1_1_debug_and_log_runtime-members.html  class_engine_1_1_runtime_1_1_debug_and_log_runtime.html  class_engine_1_1_runtime_1_1_debug_and_log_runtime.js  class_engine_1_1_runtime_1_1_error_handler-members.html  class_engine_1_1_runtime_1_1_error_handler.html  class_engine_1_1_runtime_1_1_error_handler.js  class_runtime_manger.html  (+51 more)
game/: gameLogic.lua
include/: CMakeLists.txt  main.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Runtime/: runtimeManger.cpp
src/geometry/: Modifier.cpp  modifier.cpp  object.cpp
src/rendering/: screenRendering.cpp
src/runtime/: Bootstrap.cpp  DebugAndLogRuntime.cpp  ErrorHandler.cpp  LuaRuntime.cpp  RenderRuntime.cpp  SupervisorRuntime.cpp  runtimeManger.cpp
(+56 files in other folders)
